2019-07-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/tempfile.c (AcquireTemporaryFileDescriptor): Fix
	compilation under Cygwin.  Patch by Marco Atzeri and submitted via
	email to the graphicsmagick-help mailing list on Fri, 5 Jul 2019.

2019-06-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/attribute.c (GenerateEXIFAttribute): Added range checks
	and tracing.  Fixes oss-fuzz 14998
	"graphicsmagick/coder_JPEG_fuzzer: Heap-buffer-overflow in
	Read32s".  This is a tiny read overflow.

	* coders/miff.c (ReadMIFFImage): Similar fix as to mpc.c

	* coders/mpc.c (ReadMPCImage): Fix faulty signed overflow logic
	for profiles[i].length which still allowed overflow.  Fixes
	oss-fuzz issue 15190 "graphicsmagick/coder_MPC_fuzzer:
	Out-of-memory in graphicsmagick_coder_MPC_fuzzer".

	* doc/options.imdoc: Add notes about security hazards due to
	commands which support a '@filename' syntax.

	* www/security.rst: Add notes about security hazards due to
	commands which support a '@filename' syntax.

2019-06-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Assure that 'token' is initialized.
	Fixes oss-fuzz issue 14897 "graphicsmagick/coder_MVG_fuzzer:
	Use-of-uninitialized-value in DrawImage".

	* magick/animate.c (MagickXAnimateImages): Fix memory leak of
	scene_info.pixels.

	* magick/display.c (MagickXDisplayImage): Fix heap overwrite of
	windows->image.name and windows->image.icon_name buffers.  It
	appears that the code assumed that CloneString() would always
	allocated a string at least MaxTextExtent in size. I assume that
	this issue has existed for a very long time since CloneString()
	was re-written many years ago.

	* coders/caption.c (ReadCAPTIONImage): The CAPTION reader did not
	appear to work at all any more.  Now it works again, but still not
	very well.

	* magick/command.c: Re-implement '@' file inclusion support for
	-comment, -draw, -format, and -label which was removed for the