@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020190707"
-#define public MagickPackageReleaseDate "snapshot-20190707"
+#define public MagickPackageVersionAddendum ".020190712"
+#define public MagickPackageReleaseDate "snapshot-20190712"
