@@ -1,4 +1,4 @@
-.TH gm 1 "2019/06/23" "GraphicsMagick"
+.TH gm 1 "2019/07/12" "GraphicsMagick"
 .TP
 .in 15
 .in 15
@@ -2429,7 +2429,7 @@ Please note that if the string comes from an untrusted source that it
 should be sanitized before use since this may be used to incorporate
 any readable file on the system (a security risk).
 
-The values of image type (\fB%p\fP) which may be returned include:
+The values of image type (\fB%r\fP) which may be returned include:
 
      Bilevel
      Grayscale
