@@ -2605,7 +2605,7 @@ Please note that if the string comes from an untrusted source that it
 should be sanitized before use since this may be used to incorporate
 any readable file on the system (a security risk).</font></td></tr></table>
 <table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1">
-The values of image type (<strong>%p</strong>) which may be returned include:</font></td></tr></table>
+The values of image type (<strong>%r</strong>) which may be returned include:</font></td></tr></table>
 <table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1"><pre>
      Bilevel
      Grayscale
