@@ -1,3 +1,10 @@
+2019-07-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* doc/options.imdoc (characters): Fix -format documentation to
+	reflect that '%r' returns the image type.  Patch submitted by
+	Przemysław Sobala via SourceForge patch #60 "Fix documentation
+	typo".
+
 2019-07-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/tempfile.c (AcquireTemporaryFileDescriptor): Fix
